[package]
name = "api-server"
version = "0.2.0-flare"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["cookie"] }
bcrypt = "0.13.0"
dotenvy = "0.15.6"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "time"] }
thiserror = "1.0.38"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
